2013-09-04  Anders Carlsson  <andersca@apple.com>

        De-indent Vector.h.

        Rubber-stamped by Andreas Kling.
        
        I'm cleaning up Vector and making it work with move-only objects, and the namespace WTF
        indentation is driving me crazy.

        * wtf/Vector.h:

2013-09-03  Filip Pizlo  <fpizlo@apple.com>

        CodeBlock memory cost reporting should be rationalized
        https://bugs.webkit.org/show_bug.cgi?id=120615

        Reviewed by Darin Adler.

        * wtf/RefCountedArray.h:
        (WTF::RefCountedArray::refCount):

2013-09-03  Enrica Casucci  <enrica@apple.com>

        Follow up to http://trac.webkit.org/changeset/155014

        Reviewed by Alexey Proskuryakov.

        In the r155014 I renamed hasLineBreakingPropertyComplexContext
        to requiresComplexContextForWordBreaking but forgot to
        make the same change in UnicodeWchar.h.

        * wtf/unicode/wchar/UnicodeWchar.cpp:
        (WTF::Unicode::requiresComplexContextForWordBreaking):
        * wtf/unicode/wchar/UnicodeWchar.h:

2013-09-03  Enrica Casucci  <enrica@apple.com>

        Can't select Katakana word by double-clicking.
        <rdar://problem/14654926>

        Reviewed by Alexey Proskuryakov and Ryosuke Niwa.

        For some languages, like Japanese we need
        to use more context for word breaking.
        I've renamed the function to better reflect its use
        and remove the unused hasLineBreakingPropertyComplexContextOrIdeographic.

        * wtf/unicode/icu/UnicodeIcu.h:
        (WTF::Unicode::requiresComplexContextForWordBreaking):

2013-09-03  Andreas Kling  <akling@apple.com>

        Support Vector<Ref<T>>.
        <https://webkit.org/b/120637>

        Reviewed by Antti Koivisto.

        Add a Ref(const T&) constructor to enable Vector<Ref<T>>. This looks a bit awkward
        but is necessary for Vector::append(const T&) to find a constructor.
